# forge

./: .gitignore  Makefile  README.md  pyproject.toml
benchmarks/: bench_queries.py  generate_data.py
benchmarks/data/: customers.csv  orders.csv
data/: generate_sample_data.py
examples/: basic_sql.py  dataframe_api.py  distributed_demo.py  joins_and_aggregates.py  parallel_execution.py
src/forge/: __init__.py  __main__.py
src/forge/cli/: __init__.py  explain.py  repl.py
src/forge/datasources/: __init__.py  csv_source.py  datasource.py  memory_source.py  parquet_source.py
src/forge/datatypes/: __init__.py  arrow_vector.py  column_vector.py  literal_vector.py  record_batch.py  schema.py  types.py
src/forge/distributed/: __init__.py  coordinator.py  protocol.py  worker.py
src/forge/execution/: __init__.py  context.py  result.py
src/forge/logicalplan/: __init__.py  dataframe.py  expressions.py  plan.py
src/forge/optimizer/: __init__.py  constant_folding.py  filter_pushdown.py  join_reorder.py  optimizer.py  projection_pushdown.py
src/forge/parallel/: __init__.py  executor.py  partition.py
src/forge/physicalplan/: __init__.py  expressions.py  hash_aggregate_exec.py  hash_join_exec.py  limit_exec.py  plan.py  projection_exec.py  scan_exec.py  selection_exec.py  sort_exec.py
src/forge/queryplanner/: planner.py
src/forge/sql/: __init__.py  parser.py  planner.py  (+2 more)
tests/: conftest.py  test_datasources.py  test_datatypes.py  test_execution.py  test_fuzzing.py  test_logicalplan.py  test_optimizer.py  test_parallel.py  test_physicalplan.py  test_sql.py
