[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge"
version = "0.1.0"
description = "An educational SQL query engine built on Apache Arrow"
requires-python = ">=3.10"
dependencies = [
    "pyarrow",
    "prompt_toolkit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "pandas",
    "duckdb",
]
bench = [
    "pandas",
    "duckdb",
]

[project.scripts]
forge-cli = "forge.cli.repl:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]
